--- a/config.org
+++ b/config.org
@@ -102,11 +102,6 @@ This determines the style of line numbers in effect. If set to `nil', line numbe
       :g "C-<prior>" #'centaur-tabs-backward
       :g "C-<next>" #'centaur-tabs-forward)
 #+END_SRC
-** Projectile hotkeys
-#+BEGIN_SRC emacs-lisp
-(map! :map projectile-mode-map
-      :g "<f4>" #'projectile-find-file)
-#+END_SRC
 ** Return counsel-find-file back to its default behavior
 #+BEGIN_SRC emacs-lisp
 (after! ivy
@@ -115,6 +110,19 @@ This determines the style of line numbers in effect. If set to `nil', line numbe
 (after! counsel
   (map! :map counsel-M-x-map
         :g "TAB" #'ivy-partial))
+#+END_SRC
+** Projectile-find-file
+If we are inside a project, ~C-x C-f~ should use ~counsel-projectile-find-file~, else use ~counsel-find-file~.
+#+BEGIN_SRC emacs-lisp
+(defun my/find-file ()
+  (interactive)
+  (let ((project-root (projectile-project-root)))
+    (if (and project-root
+             (not (equal (split-string project-root "/" t) (split-string (getenv "HOME") "/" t))))
+        (counsel-projectile-find-file)
+      (counsel-find-file))))
+
+(global-set-key (kbd "C-x C-f") 'my/find-file)
 #+END_SRC
 * Additional Modules
 ** Swiper
