--- a/config.org
+++ b/config.org
@@ -1397,12 +1397,13 @@ I have found anaconda-mode to be inferior ro elpy.
            #'lsp-deferred)
 #+end_src
 *** Python REPL
+Virtualenv should have ~ipython==5.*~ which is the latest LTS version of IPython.
 #+begin_src emacs-lisp
 (after! python
   (when (executable-find "ipython")
     (setq! python-shell-interpreter "ipython"
            python-shell-interpreter-interactive-arg "-i"
-           python-shell-interpreter-args "-i --no-ignore-cwd --no-banner"
+           python-shell-interpreter-args "-i --no-banner"
            python-shell-prompt-regexp "In \[[0-9]+\]: "
            python-shell-prompt-output-regexp "Out\\[[0-9]+\\]: ")))
 #+end_src
